--- a/core/templates/core/bmi_list.html
+++ b/core/templates/core/bmi_list.html
@@ -62,7 +62,7 @@
                     </tr>
                     {% if bmi.notes %}
                         <tr class="{{ row_class }} row-details">
-                            <td colspan="5"><i class="icon-note mr-2" aria-hidden="true"></i>{{ bmi.notes }}</td>
+                            <td colspan="5"><i class="icon-note me-2" aria-hidden="true"></i>{{ bmi.notes }}</td>
                         </tr>
                     {% endif %}
                 {% empty %}
