--- a/core/templates/core/timer_detail.html
+++ b/core/templates/core/timer_detail.html
@@ -6,7 +6,7 @@
 
 {% block breadcrumbs %}
     <li class="breadcrumb-item"><a href="{% url 'core:timer-list' %}">{% trans "Timers" %}</a></li>
-    <li class="breadcrumb-item font-weight-bold">{{ object }}</li>
+    <li class="breadcrumb-item fw-bold">{{ object }}</li>
 {% endblock %}
 
 {% block content %}
