--- a/core/templates/timeline/_timeline.html
+++ b/core/templates/timeline/_timeline.html
@@ -22,7 +22,7 @@
                 <div class="timeline-badge {% if object.type == "start" %}bg-success{% elif object.type == "end" %}bg-danger{% else %}bg-info{% endif %}">
                     <i class="icon-{{ object.model_name }}"></i>
                 </div>
-                <div class="card text-right">
+                <div class="card text-end">
                     <div class="card-body">
                         {{ object.event }}
                         {% for detail in object.details %}
