--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -69,7 +69,7 @@
                     </tr>
                     {% if change.notes %}
                         <tr class="{{ row_class }} row-details">
-                            <td colspan="7"><i class="icon-note mr-2" aria-hidden="true"></i>{{ change.notes }}</td>
+                            <td colspan="7"><i class="icon-note me-2" aria-hidden="true"></i>{{ change.notes }}</td>
                         </tr>
                     {% endif %}
                 {% empty %}
