--- a/core/templates/core/pumping_list.html
+++ b/core/templates/core/pumping_list.html
@@ -58,7 +58,7 @@
                     </tr>
                     {% if pumping.notes %}
                         <tr class="{{ row_class }} row-details">
-                            <td colspan="4"><i class="icon-note mr-2" aria-hidden="true"></i>{{ pumping.notes }}</td>
+                            <td colspan="4"><i class="icon-note me-2" aria-hidden="true"></i>{{ pumping.notes }}</td>
                         </tr>
                     {% endif %}
                 {% empty %}
