--- a/core/templates/core/widget_tag_editor.html
+++ b/core/templates/core/widget_tag_editor.html
@@ -5,15 +5,15 @@
         {{ k }}="{{ v }}"
     {% endfor %}>
     {% csrf_token %}
-    <span class="prototype-tag btn badge badge-pill cursor-pointer mr-1" style="display: none;">
+    <span class="prototype-tag btn badge badge-pill cursor-pointer me-1" style="display: none;">
         UNINITIALIZED PROTOTYPE
-        <span class="add-remove-icon pl-1 pr-1">+ or -</span>
+        <span class="add-remove-icon ps-1 pe-1">+ or -</span>
     </span>
     <div class="current_tags" style="min-height: 2em;">
         {% for t in widget.value %}
-        <span data-value="{{ t.name }}" data-color="{{ t.color }}" class="tag btn badge badge-pill cursor-pointer mr-1" style="background-color: {{ t.color }};">
+        <span data-value="{{ t.name }}" data-color="{{ t.color }}" class="tag btn badge badge-pill cursor-pointer me-1" style="background-color: {{ t.color }};">
             {{ t.name }}
-            <span class="add-remove-icon pl-1 pr-1">-</span>
+            <span class="add-remove-icon ps-1 pe-1">-</span>
         </span>
         {% endfor %}
     </div>
@@ -26,9 +26,9 @@
         </div>
         <span>{% trans "Recently used:" %}</span>
         {% for t in widget.tag_suggestions.quick %}
-        <span data-value="{{ t.name }}" data-color="{{ t.color }}" class="tag btn badge badge-pill cursor-pointer mr-1" style="background-color: {{ t.color }};">
+        <span data-value="{{ t.name }}" data-color="{{ t.color }}" class="tag btn badge badge-pill cursor-pointer me-1" style="background-color: {{ t.color }};">
             {{ t.name }}
-            <span class="add-remove-icon pl-1 pr-1">+</span>
+            <span class="add-remove-icon ps-1 pe-1">+</span>
         </span>
         {% endfor %}
     </div>
