Update BS5 data props

--- a/babybuddy/templates/babybuddy/filter.html
+++ b/babybuddy/templates/babybuddy/filter.html
@@ -24,7 +24,7 @@
 
 <p>
     <a class="btn btn-dark btn-sm"
-       data-toggle="collapse"
+       data-bs-toggle="collapse"
        href="#filter_form"
        role="button"
        aria-expanded="false"
