--- a/babybuddy/templates/registration/password_reset_confirm.html
+++ b/babybuddy/templates/registration/password_reset_confirm.html
@@ -22,7 +22,7 @@
             <p class="mb-0">{% trans "Enter your new password in each field below." %}</p>
         </div>
 
-        <label class="sr-only" for="password1-input-group">
+        <label class="visually-hidden" for="password1-input-group">
             {{ form.new_password1.label }}
         </label>
         <div class="input-group mb-3 fade-in">
@@ -32,7 +32,7 @@
             {% render_field form.new_password1 name='new_password1' class+='form-control' id='password1-input-group' %}
         </div>
 
-        <label class="sr-only" for="password2-input-group">
+        <label class="visually-hidden" for="password2-input-group">
             {{ form.new_password2.label }}
         </label>
         <div class="input-group mb-3 fade-in">
