--- a/babybuddy/templates/babybuddy/form_field.html
+++ b/babybuddy/templates/babybuddy/form_field.html
@@ -7,7 +7,7 @@
 </label>
 <div class="col-sm-10">
     {% if field|field_type == "booleanfield" %}
-        <div class="btn-group-toggle" data-toggle="buttons">
+        <div class="btn-group-toggle" data-bs-toggle="buttons">
             <label for="id_{{ field.name }}" class="btn btn-outline-light btn-no-hover{% if field.value %} active{% endif %}">
                 {% if field.errors %}
                     {{ field|add_class:"is-invalid" }}
