--- a/babybuddy/templates/registration/password_reset_form.html
+++ b/babybuddy/templates/registration/password_reset_form.html
@@ -17,7 +17,7 @@
     <form method="post">
         {% csrf_token %}
 
-        <label class="sr-only" for="email-input-group">
+        <label class="visually-hidden" for="email-input-group">
             {{ form.email.label }}
         </label>
         <div class="input-group mb-3 fade-in">
