--- a/core/templates/core/timer_detail.html
+++ b/core/templates/core/timer_detail.html
@@ -74,14 +74,14 @@
 
                 <form action="{% url 'core:timer-restart' timer.id %}" role="form" method="post" class="d-inline">
                     {% csrf_token %}
-                    <label class="sr-only">{% trans "Restart timer" %}</label>
+                    <label class="visually-hidden">{% trans "Restart timer" %}</label>
                     <button type="submit" class="btn btn-lg btn-secondary"><i class="icon-refresh" aria-hidden="true"></i></button>
                 </form>
 
                 {% if object.active %}
                     <form action="{% url 'core:timer-stop' timer.id %}" role="form" method="post" class="d-inline">
                         {% csrf_token %}
-                        <label class="sr-only">{% trans "Delete timer" %}</label>
+                        <label class="visually-hidden">{% trans "Delete timer" %}</label>
                         <button type="submit" class="btn btn-lg btn-warning"><i class="icon-stop" aria-hidden="true"></i></button>
                     </form>
                 {% endif %}
