Use Masonry layout for dashboard cards (for now)
This doesn't seem particularly ideal so may need a more involved refactor

--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <div id="dashboard-child" class="row">
+    <div id="dashboard-child" class="row" data-masonry='{"percentPosition": true }'>
         <div class="col-sm-6 col-lg-4">
             {% card_timer_list object %}
         </div>
