--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -3,107 +3,107 @@
 
 {% block nav %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand me-2" href={% url "babybuddy:root-router" %}>
-            <img src="{% static "babybuddy/logo/icon-brand.png" %}" width="30" height="30" class="d-inline-block align-top" alt="">
-            <span class="d-none d-lg-inline-block">
-                <span class="text-primary">Baby</span> Buddy
-            </span>
-        </a>
-        <div class="d-lg-none d-md-none d-flex me-auto p-0 ms-2">
-            <div>
-                <a class="text-muted"
-                    href="{% url 'dashboard:dashboard' %}"
-                    aria-expanded="false"><i class="icon-2x icon-dashboard" aria-hidden="true"></i>
-                </a>
-                &nbsp;
-            </div>
-            <div>
-                <a class="text-muted"
-                    href="{% url 'core:timeline' %}"
-                    aria-expanded="false"><i class="icon-2x icon-timeline" aria-hidden="true"></i>
-                </a>
-                &nbsp;
-            </div>
-        </div>
-
-        <div class="d-lg-none d-md-none d-flex ms-auto p-0 me-2">
-            <form action="{% url 'core:timer-add-quick' %}" role="form" method="post" class="me-2">
-                {% csrf_token %}
-                <label class="visually-hidden">{% trans "Quick Start Timer" %}</label>
-                <button class="btn m-0 p-0 text-success">
-                    <i class="icon-2x icon-timer" aria-hidden="true"></i>
-                </button>
-            </form>
-            <div class="dropdown show">
-                <a class="text-success"
-                   href="#"
-                   role="button"
-                   id="nav-quick-add-link"
-                   data-bs-toggle="dropdown"
-                   aria-haspopup="true"
-                   aria-expanded="false"><i class="icon-2x icon-add" aria-hidden="true"></i>
-                </a>
-
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="nav-quick-add-link">
-                    {% if perms.core.add_diaperchange %}
-                        <a class="dropdown-item p-2" href="{% url 'core:diaperchange-add' %}">
-                            <i class="icon-diaperchange" aria-hidden="true"></i>
-                            {% trans "Diaper Change" %}
-                        </a>
-                    {% endif %}
-                    {% if perms.core.add_feeding %}
-                        <a class="dropdown-item p-2" href="{% url 'core:feeding-add' %}">
-                            <i class="icon-feeding" aria-hidden="true"></i>
-                            {% trans "Feeding" %}
-                        </a>
-                    {% endif %}
-                    {% if perms.core.add_note %}
-                        <a class="dropdown-item p-2" href="{% url 'core:note-add' %}">
-                            <i class="icon-note" aria-hidden="true"></i>
-                            {% trans "Note" %}
-                        </a>
-                    {% endif %}
-                    {% if perms.core.add_sleep %}
-                        <a class="dropdown-item p-2" href="{% url 'core:sleep-add' %}">
-                            <i class="icon-sleep" aria-hidden="true"></i>
-                            {% trans "Sleep" %}
-                        </a>
-                    {% endif %}
-                    {% if perms.core.add_temperature %}
-                        <a class="dropdown-item p-2" href="{% url 'core:temperature-add' %}">
-                            <i class="icon-temperature" aria-hidden="true"></i>
-                            {% trans "Temperature" %}
-                        </a>
-                    {% endif %}
-                    {% if perms.core.add_tummytime %}
-                        <a class="dropdown-item p-2" href="{% url 'core:tummytime-add' %}">
-                            <i class="icon-tummytime" aria-hidden="true"></i>
-                            {% trans "Tummy Time" %}
-                        </a>
-                    {% endif %}
-                    {% if perms.core.add_weight %}
-                        <a class="dropdown-item p-2" href="{% url 'core:weight-add' %}">
-                            <i class="icon-weight" aria-hidden="true"></i>
-                            {% trans "Weight" %}
-                        </a>
-                    {% endif %}
-                    {% if perms.core.add_pumping %}
-                        <a class="dropdown-item p-2" href="{% url 'core:pumping-add' %}">
-                            <i class="icon-pumping" aria-hidden="true"></i>
-                            {% trans "Pumping" %}
-                        </a>
-                    {% endif %}
-
+        <div class="container-fluid">
+            <a class="navbar-brand me-2" href={% url "babybuddy:root-router" %}>
+                <img src="{% static "babybuddy/logo/icon-brand.png" %}" width="30" height="30"
+                     class="d-inline-block align-top" alt="">
+                <span class="d-none d-lg-inline-block">
+                    <span class="text-primary">Baby</span> Buddy
+                </span>
+            </a>
+            <div class="d-lg-none d-md-none d-flex me-auto p-0 ms-2">
+                <div>
+                    <a class="text-muted"
+                       href="{% url 'dashboard:dashboard' %}"
+                       aria-expanded="false"><i class="icon-2x icon-dashboard" aria-hidden="true"></i>
+                    </a>
+                    &nbsp;
+                </div>
+                <div>
+                    <a class="text-muted"
+                       href="{% url 'core:timeline' %}"
+                       aria-expanded="false"><i class="icon-2x icon-timeline" aria-hidden="true"></i>
+                    </a>
+                    &nbsp;
                 </div>
             </div>
-        </div>
+            <div class="d-lg-none d-md-none d-flex ms-auto p-0 me-2">
+                <form action="{% url 'core:timer-add-quick' %}" role="form" method="post" class="me-2">
+                    {% csrf_token %}
+                    <label class="visually-hidden">{% trans "Quick Start Timer" %}</label>
+                    <button class="btn m-0 p-0 text-success">
+                        <i class="icon-2x icon-timer" aria-hidden="true"></i>
+                    </button>
+                </form>
+                <div class="dropdown show">
+                    <a class="text-success"
+                       href="#"
+                       role="button"
+                       id="nav-quick-add-link"
+                       data-bs-toggle="dropdown"
+                       aria-haspopup="true"
+                       aria-expanded="false"><i class="icon-2x icon-add" aria-hidden="true"></i>
+                    </a>
 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <div class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-quick-add-link">
+                        {% if perms.core.add_diaperchange %}
+                            <a class="dropdown-item p-2" href="{% url 'core:diaperchange-add' %}">
+                                <i class="icon-diaperchange" aria-hidden="true"></i>
+                                {% trans "Diaper Change" %}
+                            </a>
+                        {% endif %}
+                        {% if perms.core.add_feeding %}
+                            <a class="dropdown-item p-2" href="{% url 'core:feeding-add' %}">
+                                <i class="icon-feeding" aria-hidden="true"></i>
+                                {% trans "Feeding" %}
+                            </a>
+                        {% endif %}
+                        {% if perms.core.add_note %}
+                            <a class="dropdown-item p-2" href="{% url 'core:note-add' %}">
+                                <i class="icon-note" aria-hidden="true"></i>
+                                {% trans "Note" %}
+                            </a>
+                        {% endif %}
+                        {% if perms.core.add_sleep %}
+                            <a class="dropdown-item p-2" href="{% url 'core:sleep-add' %}">
+                                <i class="icon-sleep" aria-hidden="true"></i>
+                                {% trans "Sleep" %}
+                            </a>
+                        {% endif %}
+                        {% if perms.core.add_temperature %}
+                            <a class="dropdown-item p-2" href="{% url 'core:temperature-add' %}">
+                                <i class="icon-temperature" aria-hidden="true"></i>
+                                {% trans "Temperature" %}
+                            </a>
+                        {% endif %}
+                        {% if perms.core.add_tummytime %}
+                            <a class="dropdown-item p-2" href="{% url 'core:tummytime-add' %}">
+                                <i class="icon-tummytime" aria-hidden="true"></i>
+                                {% trans "Tummy Time" %}
+                            </a>
+                        {% endif %}
+                        {% if perms.core.add_weight %}
+                            <a class="dropdown-item p-2" href="{% url 'core:weight-add' %}">
+                                <i class="icon-weight" aria-hidden="true"></i>
+                                {% trans "Weight" %}
+                            </a>
+                        {% endif %}
+                        {% if perms.core.add_pumping %}
+                            <a class="dropdown-item p-2" href="{% url 'core:pumping-add' %}">
+                                <i class="icon-pumping" aria-hidden="true"></i>
+                                {% trans "Pumping" %}
+                            </a>
+                        {% endif %}
+
+                    </div>
+                </div>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-target="#navbar-app" aria-controls="navbar-app"
-                    aria-expanded="false"  aria-label="Toggle navigation">
+                    aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse" id="navbar-app">
+            <div class="collapse navbar-collapse" id="navbar-app">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item{% if request.path == '/' %} active{% endif %}">
                         <a class="nav-link" href="{% url 'dashboard:dashboard' %}">
@@ -157,7 +157,7 @@
                                     {% trans "Note" %}
                                 </a>
                             {% endif %}
-                             
+
                         </div>
                     </li>
 
@@ -217,13 +217,14 @@
                             {% if perms.core.view_head_circumference %}
                                 <a class="dropdown-item{% if request.path == '/head-circumference/' %} active{% endif %}"
                                    href="{% url 'core:head-circumference-list' %}">
-                                    <i class="icon-head-circumference aria-hidden="true"></i>
+                                    <i class="icon-head-circumference" aria-hidden="true"></i>
                                     {% trans "Head Circumference" %}
                                 </a>
                             {% endif %}
                             {% if perms.core.add_head_circumference %}
                                 <a class="dropdown-item ps-5{% if request.path == '/head-circumference/add/' %} active{% endif %}"
-                                   href="{% url 'core:head-circumference-add' %}"><i class="icon-add" aria-hidden="true"></i>
+                                   href="{% url 'core:head-circumference-add' %}"><i class="icon-add"
+                                                                                     aria-hidden="true"></i>
                                     {% trans "Head Circumference entry" %}
                                 </a>
                             {% endif %}
@@ -244,7 +245,6 @@
 
                         </div>
                     </li>
-
                     <li class="nav-item dropdown">
                         <a id="nav-activity-menu-link"
                            class="nav-link dropdown-toggle"
@@ -258,7 +258,8 @@
 
                             {% if perms.core.view_diaperchange %}
                                 <a class="dropdown-item{% if request.path == '/changes/' %} active{% endif %}"
-                                   href="{% url 'core:diaperchange-list' %}"><i class="icon-diaperchange" aria-hidden="true"></i>
+                                   href="{% url 'core:diaperchange-list' %}"><i class="icon-diaperchange"
+                                                                                aria-hidden="true"></i>
                                     {% trans "Changes" %}
                                 </a>
                             {% endif %}
@@ -297,7 +298,8 @@
 
                             {% if perms.core.view_tummytime %}
                                 <a class="dropdown-item{% if request.path == '/tummy-time/' %} active{% endif %}"
-                                   href="{% url 'core:tummytime-list' %}"><i class="icon-tummytime" aria-hidden="true"></i>
+                                   href="{% url 'core:tummytime-list' %}"><i class="icon-tummytime"
+                                                                             aria-hidden="true"></i>
                                     {% trans "Tummy Time" %}
                                 </a>
                             {% endif %}
@@ -342,10 +344,12 @@
                                 <i class="icon-user" aria-hidden="true"></i>
                                 {% firstof user.get_full_name user.get_username %}
                             </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="nav-user-menu-link">
+                            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-user-menu-link">
                                 <h6 class="dropdown-header">{% trans "User" %}</h6>
-                                <a href="{% url 'babybuddy:user-settings' %}" class="dropdown-item">{% trans "Settings" %}</a>
-                                <a href="{% url 'babybuddy:user-password' %}" class="dropdown-item">{% trans "Password" %}</a>
+                                <a href="{% url 'babybuddy:user-settings' %}"
+                                   class="dropdown-item">{% trans "Settings" %}</a>
+                                <a href="{% url 'babybuddy:user-password' %}"
+                                   class="dropdown-item">{% trans "Password" %}</a>
                                 <form action="{% url 'babybuddy:logout' %}" role="form" method="post">
                                     {% csrf_token %}
                                     <button class="dropdown-item">
@@ -355,8 +359,10 @@
                                 <h6 class="dropdown-header">{% trans "Site" %}</h6>
                                 <a href="{% url 'api:api-root' %}" class="dropdown-item">{% trans "API Browser" %}</a>
                                 {% if request.user.is_staff %}
-                                    <a href="{% url 'babybuddy:user-list' %}" class="dropdown-item">{% trans "Users" %}</a>
-                                    <a href="{% url 'admin:index' %}" class="dropdown-item">{% trans "Database Admin" %}</a>
+                                    <a href="{% url 'babybuddy:user-list' %}"
+                                       class="dropdown-item">{% trans "Users" %}</a>
+                                    <a href="{% url 'admin:index' %}"
+                                       class="dropdown-item">{% trans "Database Admin" %}</a>
                                 {% endif %}
                                 <h6 class="dropdown-header">{% trans "Support" %}</h6>
                                 <a href="https://github.com/babybuddy/babybuddy" class="dropdown-item">
@@ -369,5 +375,6 @@
                     </ul>
                 {% endif %}
             </div>
+        </div>
     </nav>
 {% endblock %}
