Refactor deprecated BS4 classes

--- a/babybuddy/templates/registration/password_reset_confirm.html
+++ b/babybuddy/templates/registration/password_reset_confirm.html
@@ -26,9 +26,7 @@
             {{ form.new_password1.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon-lock" aria-hidden="true"></i></span>
-            </div>
+            <span class="input-group-text text-muted"><i class="icon-lock" aria-hidden="true"></i></span>
             {% render_field form.new_password1 name='new_password1' class+='form-control' id='password1-input-group' %}
         </div>
 
@@ -36,9 +34,7 @@
             {{ form.new_password2.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon-lock" aria-hidden="true"></i></span>
-            </div>
+            <span class="input-group-text text-muted"><i class="icon-lock" aria-hidden="true"></i></span>
             {% render_field form.new_password2 name='new_password2' class+='form-control' id='password2-input-group' %}
         </div>
 
