--- a/babybuddy/templates/registration/login.html
+++ b/babybuddy/templates/registration/login.html
@@ -12,9 +12,7 @@
             {{ form.username.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon-user" aria-hidden="true"></i></span>
-            </div>
+            <span class="input-group-text text-muted"><i class="icon-user" aria-hidden="true"></i></span>
             {% render_field form.username name='username' class+='form-control' id='username-input-group' placeholder=form.username.label %}
         </div>
 
@@ -22,9 +20,7 @@
             {{ form.password.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon-lock" aria-hidden="true"></i></span>
-            </div>
+            <span class="input-group-text text-muted"><i class="icon-lock" aria-hidden="true"></i></span>
             {% render_field form.password name='password' class+='form-control' id='password-input-group' placeholder=form.password.label %}
         </div>
 
