--- a/babybuddy/templates/registration/password_reset_form.html
+++ b/babybuddy/templates/registration/password_reset_form.html
@@ -21,9 +21,7 @@
             {{ form.email.label }}
         </label>
         <div class="input-group mb-3 fade-in">
-            <div class="input-group-prepend">
-                <span class="input-group-text"><i class="icon-envelope" aria-hidden="true"></i></span>
-            </div>
+            <span class="input-group-text text-muted"><i class="icon-mail" aria-hidden="true"></i></span>
             {% render_field form.email name='email' class+='form-control' id='email-input-group' placeholder=form.email.label %}
         </div>
 
