--- a/core/templates/core/child_form.html
+++ b/core/templates/core/child_form.html
@@ -32,17 +32,15 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        BabyBuddy.DatetimePicker.init(document.getElementById('datetimepicker_birth_date'), {
-             components: {
-               decades: true,
-               year: true,
-               month: true,
-               date: true,
-               hours: false,
-               minutes: false,
-               seconds: false,
-             },
-            viewMode: 'years'
+        BabyBuddy.DatetimePicker.init(document.querySelector('#datetimepicker_birth_date'), {
+            display: {
+                components: {
+                    hours: false,
+                    minutes: false,
+                    seconds: false,
+                },
+                viewMode: 'years'
+            }
         });
     </script>
 {% endblock %}
