Standardize list class and fix colspans
Fixes #469

--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -18,7 +18,7 @@
     </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
-        <table class="table table-instances">
+        <table class="table table-instances table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
                     <th>{% trans "Actions" %}</th>
