--- a/core/templates/core/bmi_list.html
+++ b/core/templates/core/bmi_list.html
@@ -18,7 +18,7 @@
     </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
-        <table class="table table-instances">
+        <table class="table table-instances table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
                     <th>{% trans "Actions" %}</th>
@@ -67,7 +67,7 @@
                     {% endif %}
                 {% empty %}
                     <tr>
-                        <th colspan="5">{% trans "No bmi entries found." %}</th>
+                        <th colspan="5">{% trans "No BMI entries found." %}</th>
                     </tr>
                 {% endfor %}
             </tbody>
