--- a/core/templates/core/note_list.html
+++ b/core/templates/core/note_list.html
@@ -18,7 +18,7 @@
     </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
-        <table class="table table-striped table-hover">
+        <table class="table table-instances table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
                     <th>{% trans "Actions" %}</th>
@@ -61,7 +61,7 @@
                     </tr>
                 {% empty %}
                     <tr>
-                        <th colspan="4">{% trans "No notes found." %}</th>
+                        <th colspan="5">{% trans "No notes found." %}</th>
                     </tr>
                 {% endfor %}
             </tbody>
