--- a/core/templates/core/tummytime_list.html
+++ b/core/templates/core/tummytime_list.html
@@ -17,7 +17,7 @@
     </h1>
     {% include 'babybuddy/filter.html' %}
     <div class="table-responsive">
-        <table class="table table-striped table-hover">
+        <table class="table table-instances table-striped table-hover">
             <thead class="thead-inverse">
                 <tr>
                     <th>{% trans "Actions" %}</th>
